# FireFrame

./: LICENSE  README.md  pyproject.toml  sample_app.py  tox.ini
.github/workflows/: test_build_deploy.yml
src/fireframe/cli/: __init__.py  project.py
src/fireframe/core/: api.py  mixins.py  models.py  serializers.py  views.py  viewsets.py
tests/views/: _fixtures.py  test_base_api_view.py  test_create_api_view.py  test_delete_api_view.py  test_list_api_view.py  test_retrieve_api_view.py  test_update_api_view.py
